wikipedia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikipedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikipedia
  template:
    metadata:
      labels:
        app: wikipedia
    spec:
      volumes:
        - name: website
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.31.2-alpine
          volumeMounts:
          - name: website
            mountPath: /usr/share/nginx/html
