wikipedia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikipedia
spec:
  type: ClusterIP
  selector:
    app: wikipedia
  ports:
    - protocol: TCP
      port: 80
