wikipedia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wikipedia
spec:
  hostnames:
    - wiki.localhost
  parentRefs:
  - name: gateway-istio
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: wikipedia
      port: 80
